<resources>
    <string name="app_name">Attendance app </string>
    <string name="enter_your_phone_number_to_get_started">Enter your phone number to get started</string>
    <string name="next">NEXT</string>
    <string name="mobile_number">mobile Number</string>
    <string name="shop_login">shop login</string>
    <string name="are_you_an_employee_employee">are you an employee?employee</string>
    <string name="don_t_have_and_account">don\'t have and account?</string>
    <string name="login">login</string>
    <string name="Emplogin">login</string>
    <string name="register">register</string>
    <string name="welcome">WELCOME</string>
    <string name="welcome_to_the_app">Welcome to the app</string>
    <string name="get_started">GET STARTED</string>
    <string name="enter_the_otp">Enter the OTP</string>
    <string name="otp">OTP</string>
    <string name="email_id">email ID</string>
    <string name="admin_name">Admin name</string>
    <string name="organization_name">Organization name</string>
    <string name="total_employee">Total employee</string>
    <string name="employee_with_phones">employee with Phones</string>
    <string name="registerbutton">Register</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_shop_login">Shop_Login</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>