<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".start"
    android:orientation="vertical"
    android:background="@drawable/bg2">

    <TextView
        android:id="@+id/welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="250dp"
        android:text="@string/welcome"
        android:textColor="@color/white"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to_the_app"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="200dp"
        android:textColor="@color/white"
        android:textSize="15sp" />

    <Button
        android:id="@+id/startButton"
        android:layout_marginTop="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/get_started"
        android:onClick="adminLogin"/>

</LinearLayout>