<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg2"
    tools:context=".adminRegistation">

    <EditText
        android:id="@+id/orgName"
        android:layout_width="291dp"
        android:layout_height="62dp"
        android:layout_marginTop="101dp"
        android:layout_marginBottom="30dp"
        android:autofillHints="name"
        android:gravity="center_horizontal"
        android:drawableStart="@drawable/building"
        android:hint="@string/organization_name"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/adminName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.419" />

    <EditText
        android:id="@+id/adminName"
        android:drawableStart="@drawable/admin"
        android:layout_width="291dp"
        android:layout_height="62dp"
        android:layout_marginBottom="30dp"
        android:autofillHints="username"
        android:gravity="center_horizontal"
        android:hint="@string/admin_name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/mailid"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/orgName" />

    <EditText
        android:id="@+id/mailid"
        android:drawableStart="@drawable/email"
        android:layout_width="291dp"
        android:layout_height="62dp"
        android:layout_marginBottom="30dp"
        android:gravity="center_horizontal"
        android:hint="@string/email_id"
        app:layout_constraintBottom_toTopOf="@+id/totalEmp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/adminName"
        android:autofillHints="emailAddress"
        android:inputType="textEmailAddress"/>

    <EditText
        android:id="@+id/totalEmp"
        android:drawableStart="@drawable/ic_baseline_people_24"

        android:layout_width="291dp"
        android:layout_height="62dp"
        android:layout_marginBottom="30dp"
        android:gravity="center_horizontal"
        android:hint="@string/total_employee"
        app:layout_constraintBottom_toTopOf="@+id/Empwithsmartphone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mailid"
        android:autofillHints="number"
        android:inputType="number"/>

    <EditText
        android:id="@+id/Empwithsmartphone"
        android:drawableStart="@drawable/ic_baseline_phone_android_24"

        android:layout_width="291dp"
        android:layout_height="62dp"
        android:layout_marginBottom="305dp"
        android:autofillHints="number"
        android:gravity="center_horizontal"
        android:hint="@string/employee_with_phones"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/totalEmp" />

    <Button
        android:id="@+id/adminRegister"
        android:layout_width="170dp"
        android:layout_height="49dp"
        android:layout_marginTop="70dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/registerbutton"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Empwithsmartphone"
        app:layout_constraintVertical_bias="0.16"
        android:onClick="adminLogin"/>

</androidx.constraintlayout.widget.ConstraintLayout>